fix overflow issue caused by overflowing imagery

--- a/src/pages/styles.global.scss
+++ b/src/pages/styles.global.scss
@@ -30,7 +30,7 @@ h1 {
 }
 
 .psyoptions {
-  position: relative;
+  overflow-x: hidden;
 }
 
 .p-button {
